crates/lang/tests/ui/contract/fail/module-missing-storage.stderr
error: missing ink! storage struct
 --> tests/ui/contract/fail/module-missing-storage.rs:4:1
  |
4 | mod contract {
  | ^^^
